--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,6 +18,45 @@
   </head>
 
   <body>
-    <%= yield %>
+    <header>
+      <nav class="top-navbar">
+        <div class="logo">
+          <%= link_to "Start Kit", root_path rescue "#" %>
+        </div>
+        <div class="nav-links">
+          <% if user_signed_in? %>
+            <span class="user-info">Logged in as: <%= current_user.email %></span>
+            <%= button_to "Sign Out", destroy_user_session_path, class: "sign-out-button", method: :delete %>
+          <% else %>
+            <%= link_to "Sign In", new_user_session_path %>
+            <%= link_to "Sign Up", new_user_registration_path %>
+          <% end %>
+        </div>
+      </nav>
+    </header>
+
+    <div class="main-container">
+      <aside class="sidebar">
+        <nav class="side-nav">
+          <ul>
+            <li><%= link_to "Home", root_path rescue "#" %></li>
+            <% if user_signed_in? %>
+              <li><%= link_to "Books", books_path rescue "#" %></li>
+            <% end %>
+          </ul>
+        </nav>
+      </aside>
+
+      <main class="content">
+        <% if notice %>
+          <p class="notice"><%= notice %></p>
+        <% end %>
+        <% if alert %>
+          <p class="alert"><%= alert %></p>
+        <% end %>
+
+        <%= yield %>
+      </main>
+    </div>
   </body>
 </html>
